--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@nestjs/config": "2.3.1",
     "@nestjs/core": "9.4.0",
     "@nestjs/mapped-types": "1.2.2",
+    "@nestjs/mongoose": "9.2.2",
     "@nestjs/platform-express": "9.4.0",
     "dotenv": "^16.0.3",
+    "mongoose": "7.1.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.2.0"
   },
