--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mapped-types": "1.2.2",
     "@nestjs/mongoose": "9.2.2",
     "@nestjs/platform-express": "9.4.0",
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.3",
     "mongoose": "7.1.0",
     "reflect-metadata": "0.1.13",
@@ -36,6 +37,7 @@
     "@nestjs/cli": "9.4.2",
     "@nestjs/schematics": "9.1.0",
     "@nestjs/testing": "9.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "4.17.13",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
