--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/mongoose": "9.2.2",
     "@nestjs/platform-express": "9.4.0",
     "bcrypt": "^5.0.1",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.0",
     "dotenv": "^16.0.3",
     "mongoose": "7.1.0",
     "reflect-metadata": "0.1.13",
